--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "joi": "^17.13.3",
     "pg": "^8.13.0",
     "proyectoclase3": "file:",
     "reflect-metadata": "^0.2.2",
